# natlink

./: .gitignore  .readthedocs.yaml  AssemblyInfoCommon.vb  CMakeLists.txt  CMakeSettings.json  COPYRIGHT.txt  Index.htm  MWTest.sln  NatLink.key  NatLink.sln  README.md  TODO.md  Why use Flit- — Flit 3.0.0 documentation.url  appveyor.yml  build_natlinkcore.ps1  build_package.cmd  build_package.ps1  build_py_package.ps1  building_and_publishing_packages.txt  changes.md  check_com_registration.ps1  compile_README.cmd  cpnatlink.ps1  cpnatlink_to_python38_PYD.ps1  default.build  discussion splitting of python code.docx  local_publish.ps1  local_publish_15.ps1  mypy.ini  natlinkcore.md  pip_install.ps1  publish_natlinkcore.ps1  publish_package_pypi.cmd  publish_package_tesetpypi.cmd  pypirc_template  pyproject.toml  readme.md  reg_dev_natlink.ps1  setup_compile_environment.ps1
NatlinkSource/: APPSUPP.REG  CDgnAppSupport.cpp  CDgnAppSupport.h  CDgnAppSupport.rgs  CDgnAppSupport1.rgs  CMakeLists.txt  COPYRIGHT.txt  DictationObject.cpp  DictationObject.h  DragCode.cpp  DragCode.h  DragonCode.cpp  DragonCode.h  Exceptions.cpp  Exceptions.h  GramObj.cpp  GrammarObject.cpp  MessageWindow.cpp  MessageWindow.h  RW Added Documentation.txt  ResObj.cpp  Resource.h  ResultObject.cpp  SPEECH.H  SecdThrd.cpp  SecdThrd.h  StdAfx.cpp  StdAfx.h  __init__.py  appsupp.h  appsupp.reg  comsupp.h  dgnSiteSurrogate.rgs  dictobj.cpp  dlldata.c  dllmain.cpp  dllmain.h  dragcode.cpp  dspeech.h  excepts.cpp  (+28 more)
NatlinkSource/COM/: appsupp.cpp  appsupp.h  dspeech.h  speech.h
NatlinkSource/natlink/: DictationObject.h  DragonCode.cpp  DragonCode.h  Exceptions.cpp  GrammarObject.h  MessageWindow.cpp  MessageWindow.h  ResultObject.h  StdAfx.cpp  StdAfx.h  dllmain.h  natlink.cpp  natlink.def  natlink.sln  natlink.vcxproj  natlink_i.h  pythwrap.cpp
NatlinkSource/natlink/COM/: appsupp.cpp  speech.h
NatlinkSource/natlinkPS/: natlinkPS.vcxproj  natlinkPS.vcxproj.filters
NatlinkSource/samples_for_interactive_debugging/: displayText.py  execScript.py  playString.py
NatlinkSource12/: CMakeLists.txt  COPYRIGHT.txt  GramObj.cpp  GramObj.h  ResObj.cpp  SecdThrd.cpp  StdAfx.h  appsupp.cpp  appsupp.h  comsupp.h  comsupp_old.h  dictobj.h  dspeech.h  dspeech_old.h  excepts.cpp  natlink.cpp  natlink.rc  natlink.txt  pythwrap.cpp  readme.md  resobj.h
PythonEnv/: CMakeLists.txt
natlinkdev/: build_package.ps1  pyproject.toml  readme.md  requirements.txt
natlinkdev/src/natlinkdev/: __init__.py
pythonsrc/: CMakeLists.txt  pyproject.toml  readme.md
pythonsrc/src/natlink/: __init__.py  _natlink_core13.pyd  _natlink_core15.pyd
pythonsrc/tests/: manual_test_dragoncode.py  test_setTrayIcon.py  testresult partial DNS15.txt  testresult.txt  unittestNatlink.py  unittestNsformat.py  unittestPrePost.py
src/: CMakeLists.txt  build_natlinkcore.ps1  natlinkcore.md  publish_natlinkcore.ps1  pyproject.toml
src/ConfigureNatlink/: natlinkconfigfunctions.py  start_natlinkconfigfunctions.py
src/MacroSystem/core/: inivars.py
src/SampleMacros/: _sample7.py  _sample_natlinkstatus.py
src/SampleMacros/OriginalSampleMacros/: _globals.py  _repeatthat.py  _sample3.py  _sample5.py  _sample8.py  excel_sample7.py  wiki.css  winword_styles_sample.py
src/natlink/: __init__.py  _natlink_core.pyi  _natlink_core13.pyd  _natlink_core15.pyd  foo.py
src/natlink/ConfigureNatlink/: natlinkconfigfunctions.py  start_postinstallscript_pywin32.cmd
src/natlink/MacroSystem/core/: gramparser.py  natlinkcorefunctions.py  natlinkstatus.py
src/natlink/core/: natlinkcorefunctions.py  natlinkstatus.py
src/natlink/core/PYD/: natlink2_Py3_15.pyd  natlink_3.7_Ver15.pyd
src/natlinkcore/: .gitignore  SendInput.py  __init__.py  config.py  debugging python instructions.docx  gramparser.py  inivars.py  loader.py  natlink.pyd  natlinkclipboard.py  natlinkcorefunctions.py  natlinkmain.py  natlinkpydebug.py  natlinkpythoninfo.py  natlinkstartup.py  natlinkstatus.py  natlinktimer.py  natlinkutils.py  nsformat.py  pathqh.py  readwritefile.py  redirect_output.py  start_natlink.py  update_pyd.ps1  utilsqh.py  wxdialogs.py
src/natlinkcore/ConfigureNatlink/: configurenatlink.pyw  natlinkconfigfunctions.py  requirements.txt  sitecustomize_temporary.py  start_configurenatlink.py  start_natlinkconfigfunctions.py
src/natlinkcore/DefaultConfig/: _config_instructions.py  _information_config.py  natlink.ini
src/natlinkcore/DefaultConfig/DefaultConfig/: _config_instructions.py  natlink.ini
src/natlinkcore/PYD/: natlink_3.8_UNICODE.pyd  natlink_3.8_Ver15.pyd
src/natlinkcore/PyTest/: README.txt  testConfigureFunctions.py  testmessagebox.py  testnatlink.py  testresult.txt  testresult_qh.txt  unittestClipboard.py  unittestNatlink.py  unittestNatlinkmain.py  unittestNatlinktimer.py  unittestNsformat.py  unittestPrePost.py
src/natlinkcore/PyTest/test_clipboardfiles/: natlink12.txt  testlarge.docx  testsmall.txt
src/natlinkcore/PyTest/test_vcl_files/: _vocolacp1252.vcl
src/natlinkcore/PyTest/testreadwritefile/: testreadanything.py
src/natlinkcore/PyTest/testutilsqh/: echtenotepadtest.txt  notepadtest.txt  testutilsqh.py  (+3 more)
src/natlinkcore/SampleMacros/: _debug_natlink.py  _mouse.py  _repeatthat.py  _sample1.py  _sample4.py  _sample7.py  _sample8.py  _sample_callback.py  _sample_directory_information.py  _sample_natlinkstatus.py  _sample_runmimic.py  _samplehypothesis.py  windict.py  wordpad.py
src/natlinkcore/configure/: README.md  configurenatlink_wdr.py  configurenatlink_wdrold.py  natlinkconfigfunctions.py
src/natlinkcore/msvcr100fix/: README.txt
src/natlinkcore/test/: alltest.py  config_test_helpers.py  conftest.py  readme.txt  test_callbackhandler.py  test_config.py  test_gramparser.py  test_loader.py  test_readwritefile.py
src/natlinkcore/testpersistence/: natlinkmain.py  natlinkstartup.py  natlinkstatus.py
src/natlinkpy/: __init__.py
src/natlinkpy/ConfigureNatlink/: README.txt  configurenatlink.pyw  configurenatlink_wdrold.py  natlinkconfigfunctions.py  requirements.txt  start_configurenatlink.py
src/natlinkpy/MacroSystem/: __init__.py
(+748 files in other folders)
