[build-system]
requires = ["flit_core >=3.2,<4,pytest>=7.1.2"]
build-backend = "flit_core.buildapi"

[project]
name = "natlinkcore"
authors = [{name = "Quintijn Hoogenboom (maintainer)", email = "q.hoogenboom@antenna.nl"}]
dynamic = ["version", "description"]
requires-python = ">=3.9"
readme = "natlinkcore.md"
dependencies= [
    "wxPython==4.1.1", 
    "pyenvutils",
    "pydebugstring",
    "dtactions>=1.5.0",
]

[tool.pytest.ini_options]
minversion = "7.1.2"
# very important
#the pythonpath lets pytest load code in your source area
#in addition to that in site-packages etc.
#you may want to run your tests without install natlinkcore with flit or pip
pythonpath = [
    "src",
    "src/natlinkcore",
    "src/natlinkcore/test",
]


[project.scripts]
natlinkconfig = "natlinkcore.configure.natlinkconfigfunctions:main_cli"
[project.urls]
Home = "https://github.com/dictation-toolbox/natlink/"
