[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "natlink"
requires-python=">=${PYTHON_VERSION},==${PYTHON_VERSION}.*"
authors = [{name = "Joel Gould"}]
readme = "readme.md"
dynamic = ["description"]
version="${NATLINK_VERSION}"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules"
    ]
    
[project.urls]
Home = "https://github.com/dictation-toolbox/natlink"
Documentation = "https://natlink.readthedocs.io/en/latest/"
Source = "https://github.com/dictation-toolbox/natlink"

[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
    "natlinkcore",  # tests aren't going to run without natlinkcore
]
dev = [
    "pyenvutils",
] 

#it is better not to publish or even build an sdist at all. it will contain more cruft.
#just use the wheel.  If one is created, at least we ignore a lot of the stuff not required for the python
#package.
[tool.flit.sdist]
include = ["src/"]
exclude= ["build","dist","documentation","InstallerSource","NatlinkSource"]

[tool.pytest.ini_options]
minversion = "7.1.2"
addopts = "--capture=tee-sys"

# very important
#the pythonpath lets pytest load code in your source area
#in addition to that in site-packages etc.
#you may want to run your tests without install natlinkcore with flit or pip
pythonpath = [
    "src/natlink",
    "tests",
]
testpaths= [
    "tests",
]
python_files=[
    "unittest*.py",
     "test_*.py"]
 