[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "natlinkcore"
authors = [{name = "Quintijn Higgenboom (maintainer)", email = "qh@antenna.nl"}]
dynamic = ["version", "description"]
requires-python = ">=3.9"
readme = "natlinkcore.md"
[project.urls]
Home = "https://github.com/dictation-toolbox/natlink"
