[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "natlinkcore"
authors = [{name = "Quintijn Hoogenboom (maintainer)", email = "q.hoogenboom@antenna.nl"}]
dynamic = ["version", "description"]
requires-python = ">=3.9"
readme = "natlinkcore.md"
dependencies= [
    "wxPython==4.1.1", 
    "pyenvutils",
    "pydebugstring",
    "dtactions",
]
[project.scripts]
natlinkconfig = "natlinkcore.configure.natlinkconfigfunctions:main_cli"
[project.urls]
Home = "https://github.com/dictation-toolbox/natlink/"
